# mos_cmake_conan

./: README.md  build.sh
apps/mos_client/: CMakeLists.txt  conanfile.py
apps/mos_client/src/: main.cpp
apps/mos_client_dp/: CMakeLists.txt  conanfile.py
libs/mos_utils/: CMakeLists.txt  conanfile.py
libs/mos_utils/include/mos_utils/: mos_callback.h
libs/mos_utils/src/: mos_callback.cpp
libs/my_print/: CMakeLists.txt  conanfile.py
libs/my_print/include/my_print/: print_result.h
libs/my_print/src/: my_print.cpp
profiles/: linux_aarch64  linux_arm32
